--- a/update_manifest.json
+++ b/update_manifest.json
@@ -17,6 +17,10 @@
         {
           "version": "0.9.9013",
           "update_link": "https://github.com/legendary-upside/sidekick/raw/main/legupsidekick-0.9.9013.xpi"
+        },
+        {
+          "version": "0.9.9014",
+          "update_link": "https://github.com/legendary-upside/sidekick/raw/main/legupsidekick-0.9.9014.xpi"
         }
       ]
     }
