--- a/beta/update_manifest.json
+++ b/beta/update_manifest.json
@@ -5,6 +5,10 @@
         {
           "version": "0.9.9023.2",
           "update_link": "https://github.com/legendary-upside/sidekick/raw/main/beta/legupsidekickbeta-0.9.9023.2.xpi"
+        },
+        {
+          "version": "0.9.9023.4",
+          "update_link": "https://github.com/legendary-upside/sidekick/raw/main/beta/legupsidekickbeta-0.9.9023.4.xpi"
         }
       ]
     }
