--- a/beta/update_manifest.json
+++ b/beta/update_manifest.json
@@ -17,6 +17,10 @@
         {
           "version": "0.9.9023.11",
           "update_link": "https://github.com/legendary-upside/sidekick/raw/main/beta/legupsidekickbeta-0.9.9023.11.xpi"
+        },
+        {
+          "version": "0.9.9037.1",
+          "update_link": "https://github.com/legendary-upside/sidekick/raw/main/beta/legupsidekickbeta-0.9.9037.1.xpi"
         }
       ]
     }
