--- a/update_manifest.json
+++ b/update_manifest.json
@@ -25,6 +25,10 @@
         {
           "version": "0.9.9037",
           "update_link": "https://github.com/legendary-upside/sidekick/raw/main/legupsidekick-0.9.9037.xpi"
+        },
+        {
+          "version": "0.9.9039",
+          "update_link": "https://github.com/legendary-upside/sidekick/raw/main/legupsidekick-0.9.9039.xpi"
         }
       ]
     }
