--- a/beta/update_manifest.json
+++ b/beta/update_manifest.json
@@ -25,6 +25,10 @@
         {
           "version": "0.9.9040.1",
           "update_link": "https://github.com/legendary-upside/sidekick/raw/main/beta/legupsidekickbeta-0.9.9040.1.xpi"
+        },
+        {
+          "version": "0.9.9040.3",
+          "update_link": "https://github.com/legendary-upside/sidekick/raw/main/beta/legupsidekickbeta-0.9.9040.1.xpi"
         }
       ]
     }
