--- a/beta/update_manifest.json
+++ b/beta/update_manifest.json
@@ -21,6 +21,10 @@
         {
           "version": "0.9.9043.11",
           "update_link": "https://github.com/legendary-upside/sidekick/raw/main/beta/legupsidekickbeta-0.9.9043.11.xpi"
+        },
+        {
+          "version": "1.0.0.1",
+          "update_link": "https://github.com/legendary-upside/sidekick/raw/main/beta/legupsidekickbeta-1.0.0.1.xpi"
         }
       ]
     }
