--- a/update_manifest.json
+++ b/update_manifest.json
@@ -21,6 +21,10 @@
         {
           "version": "1.0.1",
           "update_link": "https://github.com/legendary-upside/sidekick/raw/main/legupsidekick-1.0.1.xpi"
+        },
+        {
+          "version": "1.1.1",
+          "update_link": "https://github.com/legendary-upside/sidekick/raw/main/legupsidekick-1.1.1.xpi"
         }
       ]
     }
