--- a/beta/update_manifest.json
+++ b/beta/update_manifest.json
@@ -17,6 +17,10 @@
         {
           "version": "1.0.1.2",
           "update_link": "https://github.com/legendary-upside/sidekick/raw/main/beta/legupsidekickbeta-1.0.1.3.xpi"
+        },
+        {
+          "version": "1.1.12.2",
+          "update_link": "https://github.com/legendary-upside/sidekick/raw/main/beta/legupsidekickbeta-1.0.1.3.xpi"
         }
       ]
     }
