--- a/beta/update_manifest.json
+++ b/beta/update_manifest.json
@@ -21,6 +21,10 @@
         {
           "version": "1.1.12.4",
           "update_link": "https://github.com/legendary-upside/sidekick/raw/main/beta/legupsidekickbeta-1.1.12.4.xpi"
+        },
+        {
+          "version": "1.1.12.5",
+          "update_link": "https://github.com/legendary-upside/sidekick/raw/main/beta/legupsidekickbeta-1.1.12.5.xpi"
         }
       ]
     }
