--- a/beta/update_manifest.json
+++ b/beta/update_manifest.json
@@ -8,7 +8,11 @@
         },
         {
           "version": "1.1.12.6",
-          "update_link": "https://github.com/legendary-upside/sidekick/raw/main/beta/legupsidekickbeta-1.1.12.6.xpi"
+          "update_link": "https://github.com/legendary-upside/sidekick/raw/main/beta/legupsidekickbeta-1.1.12.5.xpi"
+        },
+        {
+          "version": "1.1.12.7",
+          "update_link": "https://github.com/legendary-upside/sidekick/raw/main/beta/legupsidekickbeta-1.1.12.5.xpi"
         }
       ]
     }
