--- a/update_manifest.json
+++ b/update_manifest.json
@@ -5,6 +5,10 @@
         {
           "version": "1.3.25",
           "update_link": "https://github.com/legendary-upside/sidekick/raw/main/legupsidekick-1.3.25.xpi"
+        },
+        {
+          "version": "1.3.32",
+          "update_link": "https://github.com/legendary-upside/sidekick/raw/main/legupsidekick-1.3.32.xpi"
         }
       ]
     }
