--- a/update_manifest.json
+++ b/update_manifest.json
@@ -9,6 +9,10 @@
         {
           "version": "1.3.37",
           "update_link": "https://github.com/legendary-upside/sidekick/raw/main/legupsidekick-1.3.37.xpi"
+        },
+        {
+          "version": "1.3.38",
+          "update_link": "https://github.com/legendary-upside/sidekick/raw/main/legupsidekick-1.3.38.xpi"
         }
       ]
     }
