--- a/update_manifest.json
+++ b/update_manifest.json
@@ -3,12 +3,12 @@
     "@legUpSidekickBackup": {
       "updates": [
         {
-          "version": "1.9.10",
-          "update_link": "https://github.com/legendary-upside/sidekick/raw/main/legupsidekick-1.9.10.xpi"
-        },
-        {
           "version": "1.9.13",
           "update_link": "https://github.com/legendary-upside/sidekick/raw/main/legupsidekick-1.9.13.xpi"
+        },
+        {
+          "version": "1.9.24",
+          "update_link": "https://github.com/legendary-upside/sidekick/raw/main/legupsidekick-1.9.24-firefox.xpi"
         }
       ]
     }
